CIRC-1932 fix code smells